[project]
name = "cursor-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-ai-projects>=1.0.0",
    "azure-identity>=1.25.1",
    "beautifulsoup4>=4.14.2",
    "fastapi[standard]>=0.121.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
]
